[gd_scene load_steps=4 format=3 uid="uid://bphrnoo80jm1k"]

[ext_resource type="Script" path="res://scenes/ui/instruction_panel.gd" id="1_hf70m"]
[ext_resource type="Theme" uid="uid://bb6vwl0h1flws" path="res://assets/FlatUI4/kenneyUI-blue.tres" id="1_yy4lr"]
[ext_resource type="FontFile" uid="uid://c5rf6prrbtmlf" path="res://assets/LazyFox Pixel Font 2/LazyFox Pixel Font 2.ttf" id="2_pkrqk"]

[node name="InstructionPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_hf70m")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 205.0
offset_bottom = 455.0
theme = ExtResource("1_yy4lr")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 3.0
offset_right = 183.0
offset_bottom = 458.0

[node name="PanelContainer" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="LevelDescriptionCaption" type="Label" parent="Panel/VBoxContainer/PanelContainer"]
layout_mode = 2
theme = ExtResource("1_yy4lr")
theme_override_fonts/font = ExtResource("2_pkrqk")
theme_override_font_sizes/font_size = 13
text = " Level Description"

[node name="PanelContainer2" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(188, 80)
layout_mode = 2

[node name="LevelDescriptionLabel" type="Label" parent="Panel/VBoxContainer/PanelContainer2/ScrollContainer"]
custom_minimum_size = Vector2(188, 80)
layout_mode = 2
theme = ExtResource("1_yy4lr")
theme_override_fonts/font = ExtResource("2_pkrqk")
theme_override_font_sizes/font_size = 13
autowrap_mode = 3

[node name="PanelContainer3" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="InstructionCaptionLabel" type="Label" parent="Panel/VBoxContainer/PanelContainer3"]
layout_mode = 2
theme = ExtResource("1_yy4lr")
theme_override_fonts/font = ExtResource("2_pkrqk")
theme_override_font_sizes/font_size = 13
text = " Instructions Allowed"

[node name="PanelContainer4" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/PanelContainer4"]
custom_minimum_size = Vector2(188, 60)
layout_mode = 2

[node name="InstructionLabel" type="Label" parent="Panel/VBoxContainer/PanelContainer4/ScrollContainer"]
custom_minimum_size = Vector2(188, 60)
layout_mode = 2
theme = ExtResource("1_yy4lr")
theme_override_fonts/font = ExtResource("2_pkrqk")
theme_override_font_sizes/font_size = 13
autowrap_mode = 3

[node name="PanelContainer5" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="InstructionEdit" type="TextEdit" parent="Panel/VBoxContainer/PanelContainer5"]
clip_contents = false
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
theme = ExtResource("1_yy4lr")
theme_override_fonts/font = ExtResource("2_pkrqk")
theme_override_font_sizes/font_size = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_yy4lr")
theme_override_fonts/font = ExtResource("2_pkrqk")
theme_override_font_sizes/font_size = 16
text = "Confirm"

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_yy4lr")
theme_override_fonts/font = ExtResource("2_pkrqk")
theme_override_font_sizes/font_size = 16
text = "Restart"

[node name="PanelContainer7" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ExecuteOneButton" type="Button" parent="Panel/VBoxContainer/PanelContainer7"]
layout_mode = 2
theme = ExtResource("1_yy4lr")
theme_override_fonts/font = ExtResource("2_pkrqk")
theme_override_font_sizes/font_size = 16
text = "Execute one step"

[node name="PanelContainer8" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ExecuteAllButton" type="Button" parent="Panel/VBoxContainer/PanelContainer8"]
layout_mode = 2
theme = ExtResource("1_yy4lr")
theme_override_fonts/font = ExtResource("2_pkrqk")
theme_override_font_sizes/font_size = 16
text = "Execute All"
